--- a/Security/src/main/webapp/reportes/rpt_capacitados.jrxml
+++ b/Security/src/main/webapp/reportes/rpt_capacitados.jrxml
@@ -11,8 +11,10 @@
 	<parameter name="pcarrera" class="java.lang.String"/>
 	<parameter name="pdepartamento" class="java.lang.String"/>
 	<parameter name="pfacultad" class="java.lang.String"/>
+	<parameter name="ptcurso" class="java.lang.Integer" isForPrompting="false"/>
+	<parameter name="pcurso" class="java.lang.Integer"/>
 	<queryString language="plsql">
-		<![CDATA[CALL rpt_capacitados ($P{pconv}, $P{psexo}, $P{yearr}, $P{pcarrera} ,$P{pdepartamento} ,$P{pfacultad} )]]>
+		<![CDATA[CALL rpt_capacitados ($P{pconv}, $P{psexo}, $P{yearr}, $P{pcarrera} ,$P{pdepartamento} ,$P{pfacultad}, $P{ptcurso},$P{pcurso} )]]>
 	</queryString>
 	<field name="convocatoria" class="java.lang.String">
 		<property name="com.jaspersoft.studio.field.name" value="convocatoria"/>
@@ -66,6 +68,11 @@
 		<property name="com.jaspersoft.studio.field.label" value="valor"/>
 		<property name="com.jaspersoft.studio.field.tree.path" value="inscripcion"/>
 	</field>
+	<field name="tipo_capacitacion" class="java.lang.String">
+		<property name="com.jaspersoft.studio.field.name" value="tipo_capacitacion"/>
+		<property name="com.jaspersoft.studio.field.label" value="tipo_capacitacion"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="tipo_capacitacion"/>
+	</field>
 	<field name="desc_valor" class="java.lang.String">
 		<property name="com.jaspersoft.studio.field.name" value="desc_valor"/>
 		<property name="com.jaspersoft.studio.field.label" value="desc_valor"/>
@@ -103,9 +110,9 @@
 		<band height="35" splitType="Stretch"/>
 	</pageHeader>
 	<columnHeader>
-		<band height="61" splitType="Stretch">
+		<band height="74" splitType="Stretch">
 			<staticText>
-				<reportElement mode="Opaque" x="36" y="0" width="81" height="61" forecolor="#FFFFFF" backcolor="#142D87" uuid="006b8310-46b7-4a4b-96d8-c32ed37d7c0d">
+				<reportElement mode="Opaque" x="20" y="1" width="70" height="63" forecolor="#FFFFFF" backcolor="#142D87" uuid="006b8310-46b7-4a4b-96d8-c32ed37d7c0d">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="38f4b0ba-ca8a-4827-a8dc-aced1754400f"/>
 				</reportElement>
 				<box>
@@ -117,7 +124,7 @@
 				<text><![CDATA[Convocatoria]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="210" y="0" width="86" height="61" forecolor="#FFFFFF" backcolor="#132D8A" uuid="969622e7-9510-4c9f-a398-4b3dcd0444d0">
+				<reportElement mode="Opaque" x="170" y="1" width="70" height="63" forecolor="#FFFFFF" backcolor="#132D8A" uuid="969622e7-9510-4c9f-a398-4b3dcd0444d0">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="00637501-733e-4462-b3e2-5545c25731a7"/>
 				</reportElement>
 				<box>
@@ -129,7 +136,7 @@
 				<text><![CDATA[Capacitación]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="117" y="0" width="93" height="61" forecolor="#FFFFFF" backcolor="#142D87" uuid="5a0c5e03-ad16-4801-9e35-003503b6b1a2">
+				<reportElement mode="Opaque" x="90" y="1" width="80" height="63" forecolor="#FFFFFF" backcolor="#142D87" uuid="5a0c5e03-ad16-4801-9e35-003503b6b1a2">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="37d3dd09-aa49-4ece-bb02-f897e8ef198e"/>
 				</reportElement>
 				<box>
@@ -141,7 +148,7 @@
 				<text><![CDATA[Nombre Docente]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="296" y="0" width="80" height="61" forecolor="#FFFFFF" backcolor="#17308A" uuid="c9d5db9a-28e4-4b02-bba6-611a14989cdf">
+				<reportElement mode="Opaque" x="320" y="1" width="80" height="63" forecolor="#FFFFFF" backcolor="#17308A" uuid="c9d5db9a-28e4-4b02-bba6-611a14989cdf">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="0ceaf5e3-39a3-4443-bc51-6a8b067ddd72"/>
 				</reportElement>
 				<box>
@@ -153,7 +160,7 @@
 				<text><![CDATA[Carreras]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="376" y="0" width="90" height="61" forecolor="#FFFFFF" backcolor="#142D87" uuid="37fda8a7-e7bc-409d-850a-306c403607a0">
+				<reportElement mode="Opaque" x="400" y="1" width="90" height="63" forecolor="#FFFFFF" backcolor="#142D87" uuid="37fda8a7-e7bc-409d-850a-306c403607a0">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="9e44aa71-527f-4039-9027-a6e4ebfb3d64"/>
 				</reportElement>
 				<box>
@@ -165,7 +172,7 @@
 				<text><![CDATA[Departamento]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="466" y="0" width="80" height="61" forecolor="#FFFFFF" backcolor="#142D87" uuid="110cb245-bc78-4580-a23c-04177466d4fd">
+				<reportElement mode="Opaque" x="490" y="1" width="80" height="63" forecolor="#FFFFFF" backcolor="#142D87" uuid="110cb245-bc78-4580-a23c-04177466d4fd">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="a412b4ec-9bb5-43ee-a218-2545e2493bea"/>
 				</reportElement>
 				<box>
@@ -176,12 +183,24 @@
 				</textElement>
 				<text><![CDATA[Facultad]]></text>
 			</staticText>
+			<staticText>
+				<reportElement mode="Opaque" x="240" y="0" width="80" height="64" forecolor="#FFFFFF" backcolor="#142D87" uuid="9f7284c8-779e-4c12-9b62-a417b868b9d9">
+					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="38f4b0ba-ca8a-4827-a8dc-aced1754400f"/>
+				</reportElement>
+				<box>
+					<pen lineWidth="1.25" lineColor="#000000"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Franklin Gothic Medium"/>
+				</textElement>
+				<text><![CDATA[Tipo Capacitación]]></text>
+			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="53" splitType="Stretch">
+		<band height="62" splitType="Stretch">
 			<textField>
-				<reportElement x="36" y="1" width="80" height="52" uuid="1141d4d6-3769-4a0b-8c61-6b91c59cc367">
+				<reportElement x="20" y="-10" width="70" height="47" uuid="1141d4d6-3769-4a0b-8c61-6b91c59cc367">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="38f4b0ba-ca8a-4827-a8dc-aced1754400f"/>
 				</reportElement>
 				<box>
@@ -191,7 +210,7 @@
 				<textFieldExpression><![CDATA[$F{convocatoria}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="117" y="1" width="93" height="52" uuid="2c70a4ef-c8a4-424f-a25a-ddbbd083c8a3">
+				<reportElement x="90" y="-10" width="80" height="47" uuid="2c70a4ef-c8a4-424f-a25a-ddbbd083c8a3">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="37d3dd09-aa49-4ece-bb02-f897e8ef198e"/>
 				</reportElement>
 				<box>
@@ -201,7 +220,7 @@
 				<textFieldExpression><![CDATA[$F{nombre_completo}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="296" y="1" width="80" height="52" uuid="ffcf91af-bea2-4ec2-9bfb-e14304eec92d">
+				<reportElement x="320" y="-10" width="80" height="47" uuid="ffcf91af-bea2-4ec2-9bfb-e14304eec92d">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="0ceaf5e3-39a3-4443-bc51-6a8b067ddd72"/>
 				</reportElement>
 				<box>
@@ -211,7 +230,7 @@
 				<textFieldExpression><![CDATA[$F{carreras}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="376" y="1" width="90" height="52" uuid="4e4d8e29-fb65-4769-9756-bfcc0a81fe6e">
+				<reportElement x="400" y="-10" width="90" height="48" uuid="4e4d8e29-fb65-4769-9756-bfcc0a81fe6e">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="9e44aa71-527f-4039-9027-a6e4ebfb3d64"/>
 				</reportElement>
 				<box>
@@ -221,7 +240,7 @@
 				<textFieldExpression><![CDATA[$F{departamento}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="466" y="1" width="80" height="52" uuid="ff9d2a15-80b0-44b3-8936-14ee556d0fab">
+				<reportElement x="490" y="-10" width="80" height="47" uuid="ff9d2a15-80b0-44b3-8936-14ee556d0fab">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="a412b4ec-9bb5-43ee-a218-2545e2493bea"/>
 				</reportElement>
 				<box>
@@ -231,7 +250,7 @@
 				<textFieldExpression><![CDATA[$F{facultad}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="210" y="1" width="87" height="52" uuid="79f8eb0a-a157-4daf-9567-a14ce2681071">
+				<reportElement x="170" y="-10" width="70" height="47" uuid="79f8eb0a-a157-4daf-9567-a14ce2681071">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="00637501-733e-4462-b3e2-5545c25731a7"/>
 				</reportElement>
 				<box>
@@ -239,6 +258,16 @@
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{capacitacion}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="240" y="-10" width="80" height="47" uuid="498446e0-cdd0-4d32-98cd-7fe1a8a11756">
+					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="996d2e57-755a-467e-87fe-02ef76d8974f"/>
+				</reportElement>
+				<box>
+					<pen lineWidth="1.0"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$F{tipo_capacitacion}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
