--- a/Security/src/main/webapp/reportes/rpt_tipo_calificacion.jrxml
+++ b/Security/src/main/webapp/reportes/rpt_tipo_calificacion.jrxml
@@ -2,13 +2,15 @@
 <!-- Created with Jaspersoft Studio version 6.19.1.final using JasperReports Library version 6.19.1-867c00bf88cd4d784d404379d6c05e1b419e8a4c  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="rpt_consolidado" pageWidth="612" pageHeight="792" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="821f3426-b2af-4170-b1df-e5ce8b6ef15a">
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
-	<property name="com.jaspersoft.studio.data.sql.SQLQueryDesigner.sash.w1" value="232"/>
-	<property name="com.jaspersoft.studio.data.sql.SQLQueryDesigner.sash.w2" value="762"/>
+	<property name="com.jaspersoft.studio.data.sql.SQLQueryDesigner.sash.w1" value="108"/>
+	<property name="com.jaspersoft.studio.data.sql.SQLQueryDesigner.sash.w2" value="881"/>
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="daGestionDocente"/>
 	<parameter name="pconv" class="java.lang.String"/>
 	<parameter name="ptipo_calificacion" class="java.lang.Integer"/>
+	<parameter name="pcurso" class="java.lang.Integer"/>
+	<parameter name="ptcurso" class="java.lang.Integer"/>
 	<queryString language="plsql">
-		<![CDATA[CALL rpt_tipo_calificacion (  $P{pconv},  $P{ptipo_calificacion} )]]>
+		<![CDATA[CALL rpt_tipo_calificacion (  $P{pconv},  $P{ptipo_calificacion},  $P{pcurso}, $P{ptcurso}  )]]>
 	</queryString>
 	<field name="convocatoria" class="java.lang.String">
 		<property name="com.jaspersoft.studio.field.name" value="convocatoria"/>
@@ -62,6 +64,11 @@
 		<property name="com.jaspersoft.studio.field.label" value="valor"/>
 		<property name="com.jaspersoft.studio.field.tree.path" value="inscripcion"/>
 	</field>
+	<field name="tipo_capacitacion" class="java.lang.String">
+		<property name="com.jaspersoft.studio.field.name" value="tipo_capacitacion"/>
+		<property name="com.jaspersoft.studio.field.label" value="tipo_capacitacion"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="tipo_capacitacion"/>
+	</field>
 	<field name="desc_valor" class="java.lang.String">
 		<property name="com.jaspersoft.studio.field.name" value="desc_valor"/>
 		<property name="com.jaspersoft.studio.field.label" value="desc_valor"/>
@@ -88,7 +95,7 @@
 				<textElement textAlignment="Center">
 					<font size="12"/>
 				</textElement>
-				<text><![CDATA[Reporte de Docentes Capacitados]]></text>
+				<text><![CDATA[Reporte de Calificaciones ]]></text>
 			</staticText>
 		</band>
 	</title>
@@ -100,9 +107,9 @@
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="61" splitType="Stretch">
+		<band height="69" splitType="Stretch">
 			<staticText>
-				<reportElement mode="Opaque" x="66" y="0" width="81" height="61" forecolor="#FFFFFF" backcolor="#142D87" uuid="006b8310-46b7-4a4b-96d8-c32ed37d7c0d">
+				<reportElement mode="Opaque" x="16" y="0" width="81" height="69" forecolor="#FFFFFF" backcolor="#142D87" uuid="006b8310-46b7-4a4b-96d8-c32ed37d7c0d">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="38f4b0ba-ca8a-4827-a8dc-aced1754400f"/>
 				</reportElement>
 				<box>
@@ -114,7 +121,7 @@
 				<text><![CDATA[Convocatoria]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="240" y="0" width="100" height="61" forecolor="#FFFFFF" backcolor="#132D8A" uuid="969622e7-9510-4c9f-a398-4b3dcd0444d0">
+				<reportElement mode="Opaque" x="290" y="0" width="100" height="69" forecolor="#FFFFFF" backcolor="#132D8A" uuid="969622e7-9510-4c9f-a398-4b3dcd0444d0">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="00637501-733e-4462-b3e2-5545c25731a7"/>
 				</reportElement>
 				<box>
@@ -126,7 +133,7 @@
 				<text><![CDATA[Tipo de calificación]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="147" y="0" width="93" height="61" forecolor="#FFFFFF" backcolor="#142D87" uuid="5a0c5e03-ad16-4801-9e35-003503b6b1a2">
+				<reportElement mode="Opaque" x="97" y="0" width="93" height="69" forecolor="#FFFFFF" backcolor="#142D87" uuid="5a0c5e03-ad16-4801-9e35-003503b6b1a2">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="37d3dd09-aa49-4ece-bb02-f897e8ef198e"/>
 				</reportElement>
 				<box>
@@ -138,7 +145,7 @@
 				<text><![CDATA[Nombre Docente]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="340" y="0" width="80" height="61" forecolor="#FFFFFF" backcolor="#17308A" uuid="c9d5db9a-28e4-4b02-bba6-611a14989cdf">
+				<reportElement mode="Opaque" x="390" y="0" width="80" height="69" forecolor="#FFFFFF" backcolor="#17308A" uuid="c9d5db9a-28e4-4b02-bba6-611a14989cdf">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="0ceaf5e3-39a3-4443-bc51-6a8b067ddd72"/>
 				</reportElement>
 				<box>
@@ -150,7 +157,7 @@
 				<text><![CDATA[Valor]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="420" y="0" width="90" height="61" forecolor="#FFFFFF" backcolor="#142D87" uuid="37fda8a7-e7bc-409d-850a-306c403607a0">
+				<reportElement mode="Opaque" x="470" y="0" width="90" height="69" forecolor="#FFFFFF" backcolor="#142D87" uuid="37fda8a7-e7bc-409d-850a-306c403607a0">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="9e44aa71-527f-4039-9027-a6e4ebfb3d64"/>
 				</reportElement>
 				<box>
@@ -161,12 +168,24 @@
 				</textElement>
 				<text><![CDATA[Descripción de valor]]></text>
 			</staticText>
+			<staticText>
+				<reportElement mode="Opaque" x="190" y="0" width="100" height="69" forecolor="#FFFFFF" backcolor="#142D87" uuid="e0a89b63-d6f1-431f-b0f6-9baab56ed465">
+					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="9e44aa71-527f-4039-9027-a6e4ebfb3d64"/>
+				</reportElement>
+				<box>
+					<pen lineWidth="1.25" lineColor="#000000"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Franklin Gothic Medium"/>
+				</textElement>
+				<text><![CDATA[Capacitación ]]></text>
+			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="53" splitType="Stretch">
+		<band height="62" splitType="Stretch">
 			<textField>
-				<reportElement x="66" y="0" width="81" height="52" uuid="e03199eb-0b34-4ac8-902f-e4c889c37e7e">
+				<reportElement x="16" y="0" width="81" height="62" uuid="e03199eb-0b34-4ac8-902f-e4c889c37e7e">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="5186e8f4-3435-409a-8085-e61f3c28cdf6"/>
 				</reportElement>
 				<box padding="0">
@@ -176,7 +195,7 @@
 				<textFieldExpression><![CDATA[$F{convocatoria}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="147" y="0" width="94" height="52" uuid="c4610ce3-f0ef-400f-8b70-6082ae461474">
+				<reportElement x="97" y="0" width="94" height="62" uuid="c4610ce3-f0ef-400f-8b70-6082ae461474">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="af37d211-b0b5-4937-9517-61bdce1d5090"/>
 				</reportElement>
 				<box padding="0">
@@ -186,7 +205,7 @@
 				<textFieldExpression><![CDATA[$F{nombre_completo}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="241" y="0" width="99" height="52" uuid="bd663a46-5298-4979-8f4b-7efcc58f3831">
+				<reportElement x="291" y="0" width="99" height="62" uuid="bd663a46-5298-4979-8f4b-7efcc58f3831">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="c594032b-5e19-4fe2-83bd-38ed1f713da6"/>
 				</reportElement>
 				<box padding="0">
@@ -196,7 +215,7 @@
 				<textFieldExpression><![CDATA[$F{tipo_calificacion}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="340" y="0" width="80" height="52" uuid="312fcd68-39a5-4fa6-8a5d-d898fdf1e50f">
+				<reportElement x="390" y="0" width="80" height="62" uuid="312fcd68-39a5-4fa6-8a5d-d898fdf1e50f">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="158c02e9-2a47-4004-a738-5309244d92ff"/>
 				</reportElement>
 				<box padding="0">
@@ -206,7 +225,7 @@
 				<textFieldExpression><![CDATA[$F{valor}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="420" y="0" width="90" height="52" uuid="09dc6ea2-18ed-4ad2-88d7-5ff64f171809">
+				<reportElement x="470" y="0" width="90" height="62" uuid="09dc6ea2-18ed-4ad2-88d7-5ff64f171809">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="fc80ccf1-c386-4b5a-ad35-47ca9946c2df"/>
 				</reportElement>
 				<box padding="0">
@@ -214,6 +233,16 @@
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{desc_valor}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="190" y="0" width="100" height="62" uuid="8bada51b-4940-473b-ad5c-0bff69ac1027">
+					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="f30822b0-cdea-4957-8b7c-7e627dbf4ac6"/>
+				</reportElement>
+				<box padding="0">
+					<pen lineWidth="0.25"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$F{capacitacion}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
