--- a/Security/src/main/webapp/reportes/rpt_consolidado.jrxml
+++ b/Security/src/main/webapp/reportes/rpt_consolidado.jrxml
@@ -40,7 +40,7 @@
 		<band height="86" splitType="Stretch">
 			<image>
 				<reportElement stretchType="ContainerBottom" x="60" y="10" width="70" height="60" uuid="b29f5ede-e47d-44da-b7df-65e5089d9407"/>
-				<imageExpression><![CDATA["C:/payara5/glassfish/logoUCA/logouca.png"]]></imageExpression>
+				<imageExpression><![CDATA["C:\\payara-5.2022.2\\payara5\\glassfish\\logoUCA\\logouca.png"]]></imageExpression>
 			</image>
 			<line>
 				<reportElement x="50" y="80" width="457" height="1" uuid="e7c83699-351a-4acb-b5e6-d9c97a4735fa"/>
